--- a/WhatsTheWeatherLikeApp/packages.config
+++ b/WhatsTheWeatherLikeApp/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="RestSharp" version="104.2.0" targetFramework="wp71" />
+  <package id="WPtoolkit" version="4.2013.08.16" targetFramework="wp71" />
 </packages>
