--- a/WhatsTheWeatherLikeApp/WhatsTheWeatherLikeApp.csproj
+++ b/WhatsTheWeatherLikeApp/WhatsTheWeatherLikeApp.csproj
@@ -66,8 +66,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="WeatherPage.xaml.cs">
-      <DependentUpon>WeatherPage.xaml</DependentUpon>
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="WeatherInfoPage.xaml.cs">
       <DependentUpon>WeatherInfoPage.xaml</DependentUpon>
@@ -79,7 +79,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </ApplicationDefinition>
-    <Page Include="WeatherPage.xaml">
+    <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
